Modifications pages evaluation et etablissement pour boutons de retour et on peut toujours ajouter un établissement

--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -13,6 +13,11 @@
     {{ afficher_grille('flan', etablissement.flans, current_user, form_flan, etablissement) }}
 
     <!-- Bouton retour -->
-    <a href="#" onclick="window.history.back(); return false;" class="btn-back">← Retour à la liste</a>
+           <div>
+            <a href="{{ url_for('main.index') }}" class="btn btn-back btn-with-icon">
+                <i class="fas fa-arrow-left"></i>
+                Retour à l'accueil
+            </a>
+        </div>
 </div>
 {% endblock %}
